# automake

./: .autom4te.cfg  .cvsignore  .dir-locals.el  .git-log-fix  .gitattributes  .gitignore  AUTHORS  COPYING  ChangeLog  ChangeLog.00  ChangeLog.01  ChangeLog.02  ChangeLog.03  ChangeLog.04  ChangeLog.09  ChangeLog.11  ChangeLog.1998  ChangeLog.2000  ChangeLog.96  ChangeLog.98  CheckListOfTests.am  GNUmakefile  HACKING  INSTALL  Makefile.am  Makefile.in  Makefile.old  Makefile.sav  NEWS  NEWS-2.0  NEWS-future  NG-NEWS  README  README-alpha  THANKS  TODO  acconfig.h  acinstall  aclocal.in  aclocal.m4  (+100 more)
PLANS/: rm-f-without-args.txt  subdir-objects.txt
PLANS/obsolete-removed/: am-prog-mkdir-p.txt  configure.in.txt
PLANS/texi/: drop-split-info-files.txt  warnings-for-automake-ng-compatibility.txt
contrib/: Makefile.am  README  check-html.am  checklinkx  tap-driver.pl  test-driver.scm
doc/: .cvsignore  .gitignore  Makefile.am  Makefile.in  Makefile.inc  automake-history.texi  automake-ng.texi  automake.texi  fdl.texi  help2man  local.mk  stamp-vti  version.texi
lib/: COPYING  INSTALL  Makefile.am  Makefile.in  Makefile.inc  acinstall  ansi2knr.c  ar-lib  compile  config-ml.in  config.guess  config.sub  depcomp  elisp-comp  gen-perl-protos  gendocs.sh  gendocs_template  gitlog-to-changelog  gnupload  install-sh  local.mk  mdate-sh  missing  mkinstalldirs  py-compile  symlink-tree  tap-driver  tap-driver.pl  tap-driver.sh  test-driver  texinfo.tex  update-copyright  ylwrap
lib/Automake/: .cvsignore  .gitignore  ChannelDefs.pm  Channels.pm  CondStack.pm  Condition.pm  Conditional.pm  ConditionalSet.pm  ConfVars.pm  Config.in  Configure_ac.pm  DisjConditions.pm  End.pm  Errors.pm  File.pm  FileUtils.pm  General.pm  Getopt.pm  Global.pm  HandleConfigure.pm  Item.pm  ItemDef.pm  LangHandling.pm  Language.pm  Location.pm  Makefile.am  Makefile.in  Makefile.inc  Options.pm  Requires.pm  Rule.pm  RuleDef.pm  SilentRules.pm  Standards.pm  Struct.pm  Texi.pm  TmpModule.pm  Utils.pm  VarAppend.pm  VarDef.pm  (+5 more)
lib/Automake/Parser/: .gitignore  Converter.pl  Lexer.pm  Makefile  ParserTable.pm  Tree.pm  automake.y  input.txt  parser.pl  test.sh
lib/Automake/Parser/t/: automakecomment.txt  commen10.txt  commen11.txt  comment-block.txt  comment.txt  comment2.txt  comment4.txt  comment7.txt  comment8.txt  comment9.txt  conditional.txt  fragment.txt  multiline.txt  multilinecoment.txt  nestedcond.txt  primaries.txt  subdirs.txt
lib/Automake/Parser/t/app/: Makefile.am
lib/Automake/Parser/t/app/app3/: Makefile.am
lib/Automake/Parser/t/app1/: Makefile.am
lib/Automake/Parser/t/app3/: Makefile.am
lib/Automake/Parser/t/app3/app/: Makefile.am
lib/Automake/tests/: .gitignore  Cond2.pl  Cond3.pl  Condition-t.pl  Condition.pl  Conditional.pl  ConditionalSet.pl  DisjCon2.pl  DisjCon3.pl  DisjConditions-t.pl  DisjConditions.pl  Makefile.am  Makefile.in  Version.pl  Version2.pl  Version3.pl  Wrap.pl
lib/am/: Makefile.am  Makefile.in  Makefile.inc  all-target.am  am-dir.am  am-dir.mk  ansi2knr.am  check-html.am  check-target.am  check-typos.am  check-typos.mk  check.am  check2.am  clean-hdr.am  clean.am  clean.mk  color-tests.am  color-tests.mk  common-targets.mk  comp-vars.am  compile.am  configure.am  data.am  dejagnu.am  dejagnu.mk  depend.am  depend2.am  distcheck.am  distcheck.mk  distdir.am  distdir.mk  footer.am  header-vars.am  header-vars.mk  header.am  inst-vars.am  install.am  java.am  lang-compile.am  lex.am  (+31 more)
m4/: .cvsignore  AM_C_PROTOTYPES.m4  AM_FEATURE_CTYPE.m4  AM_FEATURE_ERRNO.m4  AM_FEATURE_EXIT.m4  AM_FUNC_FNMATCH.m4  AM_FUNC_STRTOD.m4  AM_GNU_GETTEXT.m4  AM_HEADER_TIOCGWINSZ_NEEDS_SYS_IOCTL.m4  AM_INIT_AUTOMAKE.m4  AM_LC_MESSAGES.m4  AM_MAINTAINER_MODE.m4  AM_PATH_LISPDIR.m4  AM_PROG_CC_STDC.m4  AM_PROG_INSTALL.m4  AM_PROG_LIBTOOL.m4  AM_SYSTEM_HEADER.m4  AM_SYS_POSIX_TERMIOS.m4  AM_TYPE_PTRDIFF_T.m4  AM_WITH_DMALLOC.m4  AM_WITH_NLS.m4  AM_WITH_REGEX.m4  Makefile.am  Makefile.in  Makefile.inc  amversion.in  amversion.m4  ar-lib.m4  as.m4  auxdir.m4  ccdepend.m4  ccstdc.m4  cond-if.m4  cond.m4  cxxdepend.m4  cygwin.m4  depend.m4  depout.m4  depvars.m4  dmalloc.m4  (+45 more)
m4/acdir/: .placeholder  README
m4/internal/: ac-config-macro-dirs.m4
maint/: am-ft
maintainer/: am-ft  am-xft  check-perl-protos  maint.mk  rename-tests  syntax-checks.mk
old/: ChangeLog-tests  ChangeLog.00  ChangeLog.01  ChangeLog.02  ChangeLog.03  ChangeLog.04  ChangeLog.09  ChangeLog.11  ChangeLog.96  ChangeLog.98  TODO
t/: CheckListOfTests.am  Makefile.am  Makefile.inc  README  a68-demo.sh  ac-output-old.tap  acloca10.sh  acloca11.sh  acloca12.sh  acloca13.sh  acloca14.sh  acloca14b.sh  acloca15.sh  acloca16.sh  acloca17.sh  acloca18.sh  acloca19.sh  acloca20.sh  acloca21.sh  acloca22.sh  acloca22b.sh  acloca23.sh  aclocal-I-and-install.sh  aclocal-I-order-1.sh  aclocal-I-order-2.sh  aclocal-I-order-3.sh  aclocal-acdir.sh  aclocal-amflags.sh  aclocal-autoconf-version-check.sh  aclocal-comments-respected.sh  aclocal-deleted-header-aclocal-amflags.sh  aclocal-deleted-header.sh  aclocal-deps-subdir.sh  aclocal-deps.sh  aclocal-dirlist-abspath.sh  aclocal-dirlist-globbing.sh  aclocal-dirlist.sh  aclocal-install-absdir.sh  aclocal-install-fail.sh  aclocal-install-mkdir.sh  (+1586 more)
t/ax/: is  (+19 more)
tests/: .cvsignore  .gitignore  ChangeLog  ChangeLog-old  CheckListOfTests.am  Makefile.am  Makefile.in  README  ac-output-old.tap  acinclude.test  aclibobj.test  acloca10.test  acloca11.test  acloca12.test  acloca13.test  acloca14.test  acloca15.test  acloca16.test  acloca17.test  acloca18.test  acloca19.test  acloca20.test  acloca21.test  acloca22.test  acloca23.test  aclocal-acdir.test  aclocal-install-absdir.test  aclocal-install-fail.test  aclocal-install-mkdir.test  aclocal-no-install-no-mkdir.test  aclocal-path-install-serial.test  aclocal-path-install.test  aclocal-path-nonexistent.test  aclocal-path-precedence.test  aclocal-path.test  aclocal-print-acdir.test  aclocal-search-path.tap  aclocal-verbose-install.test  aclocal.in  aclocal.test  (+1464 more)
tests/pm/: Condition-t.pl  Condition.pl  DisjCon3.pl  Version.pl  Wrap.pl
(+51 files in other folders)
